tests/fixtures/invalid/pow_bool_str_list.py
# Cannot call pow() with Bool, Str, List[int]
x = pow(True, "hello", [1, 2, 3])
